# spirulae-splat

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  README.md  build_develop.bash  pyproject.toml  setup.py
scripts/: .gitignore  README.md  batch_process_data.bash  convert_raw.py  downscale_dataset.py  enhance_images.py  export_mesh.py  export_ply_3dgs.py  export_ply_triangle.py  extract_frames.py  generate_report_colmap.py  glomap_color.py  mask.py  plot_benchmark_results.py  plot_ppisp.py  predict_geometry.py  process_data_colmap.py  process_data_metashape.py  render_dataset.py  run_colmap.bash  run_colmap_mask.bash  run_colmap_sam.bash  undistort_dataset.py
scripts/SAM2-GUI/: README.md  mask_app.py  requirements.txt
spirulae_splat/: background_field.py  cuda_resource_viewer.py  generate_headers.py  generate_kernel_instantiation.py  ns_config.py  ns_datamanager.py  ns_dataparser.py  ns_dataset.py  ns_field.py  ns_model.py  ns_pipeline.py  perf_timer.py  spirulae_config.py  spirulae_datamanager.py  spirulae_model.py  spirulae_pipeline.py  ss_benchmark.py  ss_trainer.py  ss_viewer.py
spirulae_splat/modules/: camera.py  camera_utils.py  colmap_utils.py  core.py  datamanager.py  dataparser.py  dataset.py  edge_detector.py  enhancer.py  exposure_correction.py  lpips.py  metashape_utils.py  model.py  optimizer.py  per_pixel.py  resample.py  supervision.py  trainer.py  training_losses.py
spirulae_splat/scripts/: .gitignore
spirulae_splat/scripts/depth_anything_v2/: README.md
spirulae_splat/splat/: README.md  __init__.py  _camera.py  _torch_impl.py  background_sh.py  gsplat_3dgs_wrapper.py  project_gaussians.py  rasterize.py  rasterize_depth.py  rasterize_depth_sorted.py  rasterize_indices.py  rasterize_simple.py  rasterize_simple_sorted.py  rasterize_simplified.py  rasterize_simplified_sorted.py  rasterize_sorted.py  relocation.py  rendering.py  sh.py  utils.py
spirulae_splat/splat/cuda/: __init__.py  _backend.py  _wrapper.py  _wrapper_per_pixel.py  _wrapper_projection.py  _wrapper_rasterize.py  header_generator.py
spirulae_splat/splat/cuda/csrc/: BackgroundSphericalHarmonics.cu  BackgroundSphericalHarmonics.cuh  BilagridUtils.cu  BilagridUtils.cuh  CMakeLists.txt  Densify.cu  Densify.cuh  FusedSSIM.cu  FusedSSIM.cuh  IntersectTile.cu  IntersectTile.cuh  Optimizer.cu  Optimizer.cuh  PerPixelLoss.cu  PerPixelLoss.cuh  PerSplatLoss.cu  PerSplatLoss.cuh  PixelWise.cu  PixelWise.cuh  Primitive.cuh  Primitive3DGS.cuh  Primitive3DGUT.cuh  Primitive3DGUT_SV.cuh  PrimitiveBase3DGS.cuh  PrimitiveBase3DGUT.cuh  PrimitiveOpaqueTriangle.cuh  PrimitiveVoxel.cuh  Projection.3dgs.cu  Projection.3dgs.hd.cu  Projection.3dgs.hd_all.cu  Projection.3dgs.hd_pos.cu  Projection.3dgut.cu  Projection.3dgut.hd.cu  Projection.3dgut.hd_all.cu  Projection.3dgut.hd_pos.cu  Projection.3dgut_sv.cu  Projection.cu  Projection.cuh  Projection.mip.cu  Projection.mip.hd.cu  (+89 more)
spirulae_splat/splat/cuda/csrc/gsplat/: Common.h  Utils.cuh
spirulae_splat/splat/cuda/ins/: Pb3gFAr.cu  Pb3gFN.cu  Pb3gFP.cu  Pb3gPAr.cu  Pb3gPN.cu  Pb3gPP.cu  Pb3gSAr.cu  Pb3gSN.cu  Pb3gSP.cu  Pb3uFAr.cu  Pb3uFN.cu  Pb3uFP.cu  Pb3uPAr.cu  Pb3uPN.cu  Pb3uPP.cu  Pb3uSAr.cu  Pb3uSN.cu  Pb3uSP.cu  PbMsFAr.cu  PbMsFN.cu  PbMsFP.cu  PbMsPAr.cu  PbMsPN.cu  PbMsPP.cu  PbMsSAr.cu  PbMsSN.cu  PbMsSP.cu  PbOtFN.cu  PbOtPN.cu  PbSv3u2FN.cu  PbSv3u2PN.cu  PbSv3u3FN.cu  PbSv3u3PN.cu  PbSv3u4FN.cu  PbSv3u4PN.cu  PbSv3u5FN.cu  PbSv3u5PN.cu  PbSv3u6FN.cu  PbSv3u6PN.cu  PbSv3u7FN.cu  (+182 more)
spirulae_splat/splat/cuda/slang/: all.slang  build.bash  build_postprocess.py  densify.slang  depth_to_normal.slang  per_pixel_losses.slang  per_splat_losses.slang  pixel_wise.slang  ppisp.slang  primitive.slang  primitive_3dgs.slang  primitive_3dgs_sv.slang  primitive_opaque_triangle.slang  primitive_opaque_triangle_eval3d.slang  primitive_voxel.slang  projection.slang  projection_3dgs.slang  projection_opaque_triangle.slang  projection_opaque_triangle_eval3d.slang  projection_utils.slang
spirulae_splat/splat_tests/: test_project_gaussians.py
spirulae_splat/strategy/: __init__.py  default.py  mcmc.py  opaque.py  ops.py  relocation.py  svraster.py
spirulae_splat/viewer/: __init__.py  annotation.py  camera.py  camera_t265.yaml  http_server.py  model.py  render_equirectangular.py  render_worker.py  server.py  utils.py  viewer.html  viewer.py  ws_server.py
spirulae_splat/viewer_legacy/: __init__.py  align_apriltag.py  camera.py  model.py  utils.py  viewer.py
spirulae_splat/viewer_legacy/cameras/: equirectangular.yaml  imx219.yaml  s21.yaml  t265.yaml  zipnerf.yaml
tests/: test_compute_per_splat_losses.py  test_per_pixel.py  test_ppisp.py  test_project_gaussians.py  test_rasterization.py  test_rasterize.py  test_rasterize_depth.py  test_rasterize_depth_sorted.py  test_rasterize_simple.py  test_rasterize_simple_sorted.py  test_rasterize_simplified.py  test_rasterize_simplified_sorted.py  test_rasterize_sorted.py  test_render_background_sh.py  test_sh.py  test_ssim.py  utils.py
tests/viewer/: camera.py  model.py  viewer.py
webgl/: .gitignore  README.md  camera.js  convert.py  index.html  main.js  module.wasm  pack_components.cpp  shader-background.glsl  shader-frag.glsl  shader-vert.glsl  ssplat2pcl.py  style.css
webgl/src/: BVH_Ray_Tracing_Fragment.glsl  camera.js  collision.h  controller.h  controller.js  main.js  module.cpp  module.js  module.wasm  module_build.bash  renderer.js  shader-background.glsl  shader-frag.glsl  shader-pps-projection-frag.glsl  shader-pps-projection.glsl  shader-pps-rasterize.glsl  shader-utils-ch.glsl  shader-utils-sh.glsl  shader-utils.glsl  shader-vert.glsl  worker.js
