[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spirulae-splat"
version = "2026.4.1"
dynamic = ["description", "dependencies"]

[project.scripts]
spirulae-train = "spirulae_splat.ss_trainer:entrypoint"
spirulae-benchmark = "spirulae_splat.ss_benchmark:entrypoint"
spirulae-viewer = "spirulae_splat.ss_viewer:entrypoint"

[tool.poetry.scripts]
spirulae-train = "spirulae_splat.ss_trainer:entrypoint"
spirulae-benchmark = "spirulae_splat.ss_benchmark:entrypoint"
spirulae-viewer = "spirulae_splat.ss_viewer:entrypoint"
